--- a/ttm.html
+++ b/ttm.html
@@ -85,7 +85,7 @@
   <div class="card">
     <div class="header">
       <div class="title">Trailing Twelve Month Dollar Volume for 25 Years</div>
-      <div class="subtitle">January 2001 – January 2026 &nbsp;|&nbsp; Toronto Regional Real Estate Board (TRREB) &nbsp;|&nbsp; Values in $Millions CAD</div>
+      <div class="subtitle">January 2001 – January 2026 &nbsp;|&nbsp; TRREB &nbsp;|&nbsp; Values in $Millions CAD</div>
     </div>
 
     <div class="chart-container">
